separate example with AWT